fix scroll on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -135,6 +135,11 @@ table {
   box-sizing: border-box;
 }
 
+html,
+body {
+  overscroll-behavior: none;
+}
+
 html {
   font-size: 62.5%;
 }
@@ -713,6 +718,11 @@ button {
 .activities__desc {
   margin-top: 9px;
   line-height: 1.4;
+}
+@media (max-width: 575.98px) {
+  .activities__desc {
+    font-size: 1.8rem;
+  }
 }
 .activities__btn {
   margin: 27px 0 0 237px;
